# meshsorocaba.github.io

./: .dir-locals.el  .gitignore  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: mkdocs.yml
docs/: como-participar.md  config-pessoal.yaml  configuracao-meshtastic.md  configuracao.md  equipamento-recomendado.md  equipamento.md  guia-rapido.md  index.md  meshtastic.md  o-que-e-uma-rede-mesh.md  o-que-e.md  perguntas-frequentes.md  recursos.md  redes-mesh.md  roteadores.md
docs/blog/: .authors.yml
docs/blog/posts/: meshtastic-vs-meshcore-por-que-as-grandes-comunidades-estao-mudando-de-plataforma.md  meshtastic-vs-meshcore.md  testando-algumas-placas-solares-portateis.md  testando-presets-do-meshcore-para-sp.md  teste.md
docs/configuracao/: companions.md  escolhendo-o-modo-do-dispositivo.md  index.md  observers.md  repeaters.md  temporizacao-e-deduplicacao.md
docs/ferramentas/: calculadora-bateria-e-placa-solar.md  index.md  mapa-de-iatas.md  nomes-repetidoras.md  nomes-repetidores.md
docs/js/: airport-map.js  airports.csv  brazil_cities.json  repeater-name-generator.js  solar-calculator.js
docs/meshcore/: como-configurar-um-observer-no-meshcore.md  configuracao.md  index.md  nomes-repetidoras.md
docs/meshtastic/: configuracao.md  index.md
docs/referencia/: index.md
docs/styles/: extra.css
overrides/partials/: header.html
